--- a/tensorflow/lite/micro/tools/make/Makefile
+++ b/tensorflow/lite/micro/tools/make/Makefile
@@ -122,8 +122,13 @@ ifeq ($(TOOLCHAIN), armclang)
 else
   CORE_OPTIMIZATION_LEVEL := -Os
 endif
-KERNEL_OPTIMIZATION_LEVEL := -O2
-THIRD_PARTY_KERNEL_OPTIMIZATION_LEVEL := -O2
+ifeq ($(BUILD_TYPE), debug)
+  KERNEL_OPTIMIZATION_LEVEL := -O0
+  THIRD_PARTY_KERNEL_OPTIMIZATION_LEVEL := -O0
+else
+  KERNEL_OPTIMIZATION_LEVEL := -O2
+  THIRD_PARTY_KERNEL_OPTIMIZATION_LEVEL := -O2
+endif
 
 # Warn if deprecated optimization level is set.
 OPTIMIZATION_LEVEL :=
